tests/is-a-closure.stderr
error: DON'T NEED NO STINKEN LAMBDA
 --> $DIR/is-a-closure.rs:7:13
  |
7 |     let _ = #[not_a_closure] || { "hi" };
  |             ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
